--- a/pom.xml
+++ b/pom.xml
@@ -118,8 +118,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
+            <groupId>com.tecsup</groupId>
             <artifactId>spring-jdbc</artifactId>
+             <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
